--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div class="aaa">
-        <img src="./eisenhower-matrix.jpg"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+        <img src="./eisenhower-matrix.jpg">
+            <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
         <p id="topSectionForAddingElementToList">
@@ -34,7 +35,8 @@
         <ul id="completed-tasks">
             <li><input type="checkbox" checked>
                 <label class="task">See the Doctor</label>
-                <input type="text"><button class="edit">Edit</button>
+                <input type="text">
+                <button class="edit">Edit</button>
                 <button class="delete"><img src="./remove.svg"></button>
           </li>
         </ul>
