--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <section class="info">
-        <img src="./eisenhower-matrix.jpg">
+        <img src="./eisenhower-matrix.jpg" alt="matrix">
             <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="elem">
