--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <section class="info">
+    <header class="header">
         <img src="./eisenhower-matrix.jpg" alt="matrix">
-            <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </section>
-    <section class="elem">
-        <div class="elem-add">
+            <a href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
+    <main class="main">
+        <section>
             <label for="new-task">Add Item</label>
             <input id="new-task" type="text">
             <button>Add</button>
-        </div>
-        <h3>Todo</h3>
+        </section>
+        <h3 class="title">Todo</h3>
         <ul class="list" id="incomplete-tasks">
           <li><input type="checkbox">
               <label class="task">Pay Bills</label>
@@ -31,7 +31,7 @@
               <button class="delete"><img src="./remove.svg"></button>
           </li>
         </ul>
-        <h3>Completed</h3>
+        <h3 class="title">Completed</h3>
         <ul class="list" id="completed-tasks">
             <li><input type="checkbox" checked>
                 <label class="task">See the Doctor</label>
@@ -40,7 +40,8 @@
                 <button class="delete"><img src="./remove.svg"></button>
           </li>
         </ul>
-    </section>
+    </main>
     <script src="app.js"></script>
+    </div>
   </body>
 </html>
