--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </section>
         <h3 class="title">Todo</h3>
         <ul class="list" id="incomplete-tasks">
-          <li><input type="checkbox">
+          <li class="list__item"><input type="checkbox">
               <label class="task">Pay Bills</label>
               <input type="text">
               <button class="edit">Edit</button>
               <button class="delete"><img src="./remove.svg"></button>
           </li>
-          <li class="edit-mode">
+          <li class="list__item edit-mode">
               <input type="checkbox">
               <label class="task">Go Shopping</label>
               <input type="text" value="Go Shopping" class="task">
@@ -33,7 +33,7 @@
         </ul>
         <h3 class="title">Completed</h3>
         <ul class="list" id="completed-tasks">
-            <li><input type="checkbox" checked>
+            <li class="list__item"><input type="checkbox" checked>
                 <label class="task">See the Doctor</label>
                 <input type="text">
                 <button class="edit">Edit</button>
